--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,3 +2,5 @@
 @import "utils/vars";
 @import "utils/fonts";
 @import "utils/reset";
+@import "../../components/ui-logo/ui-logo.scss";
+@import "modules/colors&types.scss";
