--- a/src/assets/scss/utils/font-template.scss
+++ b/src/assets/scss/utils/font-template.scss
@@ -4,7 +4,7 @@
   color: $dark-shade-100;
   font-weight: 700;
   font-size: 24px;
-  font-family: $titleFont;
+  font-family: $mainFont;
   font-style: normal;
   line-height: 30px;
 }
