--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,5 +2,7 @@
 @import "utils/vars";
 @import "utils/fonts";
 @import "utils/reset";
-@import "../../components/ui-logo/ui-logo.scss";
+@import "components/ui-logo/ui-logo.scss";
+@import "components/input/input-text/input-text.scss";
 @import "modules/colors&types.scss";
+@import "modules/form-elements.scss";
