--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,5 +4,6 @@
 @import "utils/reset";
 @import "components/ui-logo/ui-logo.scss";
 @import "components/input/input-text/input-text.scss";
+@import "components/input/checkbox/checkbox.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
