--- a/src/pug/pages/form-elements.pug
+++ b/src/pug/pages/form-elements.pug
@@ -15,5 +15,5 @@ block content
         h3.form-elements__title Checkbox Buttons
         .form-elements__checkbox
           +checkbox('Можно курить')(class='checkbox__inner')
-          +checkbox('Можно с питомцами')(class='checkbox__inner')
-          +checkbox('Можно пригласить гостей (до 10 человек)')
+          +checkbox('Можно с питомцами')(class='checkbox__inner')(checked)
+          +checkbox('Можно пригласить гостей (до 10 человек)')(checked)
