--- a/src/components/input/checkbox/checkbox.pug
+++ b/src/components/input/checkbox/checkbox.pug
@@ -1,5 +1,5 @@
 mixin checkbox(text)
   label.check(class=attributes.class)
-    input(class="check__input" type="checkbox")
+    input(class="check__input" type="checkbox" checked=attributes.checked)
     span.check__box
     =text
