add radio buttons

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -5,5 +5,6 @@
 @import "components/ui-logo/ui-logo.scss";
 @import "components/input/input-text/input-text.scss";
 @import "components/input/checkbox/checkbox.scss";
+@import "components/input/radio/radio.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
