--- a/src/pug/pages/form-elements.pug
+++ b/src/pug/pages/form-elements.pug
@@ -1,6 +1,7 @@
 extends ../layouts/uikit
 include ../../components/input/input-text/input-text
 include ../../components/input/checkbox/checkbox
+include ../../components/input/radio/radio
 block variables
   -var title= "Form Flements"
 block content
@@ -17,3 +18,8 @@ block content
           +checkbox('Можно курить')(class='checkbox__inner')
           +checkbox('Можно с питомцами')(class='checkbox__inner')(checked)
           +checkbox('Можно пригласить гостей (до 10 человек)')(checked)
+      .form-elements__inner
+        h3.form-elements__title Radio buttons
+        .form-elements__radio
+          +radio('Мужчина')(class="radio__inner" name='gender' checked)
+          +radio('Женщина')(name='gender')
