--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,5 +6,6 @@
 @import "components/input/input-text/input-text.scss";
 @import "components/input/checkbox/checkbox.scss";
 @import "components/input/radio/radio.scss";
+@import "components/input/toggle/toggle.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
