add button like

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,5 +7,6 @@
 @import "components/input/checkbox/checkbox.scss";
 @import "components/input/radio/radio.scss";
 @import "components/input/toggle/toggle.scss";
+@import "components/button-like/button-like.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
