--- a/src/pug/pages/form-elements.pug
+++ b/src/pug/pages/form-elements.pug
@@ -3,6 +3,7 @@ include ../../components/input/input-text/input-text
 include ../../components/input/checkbox/checkbox
 include ../../components/input/radio/radio
 include ../../components/input/toggle/toggle
+include ../../components/button-like/button-like
 block variables
   -var title= "Form Flements"
 block content
@@ -29,3 +30,8 @@ block content
         .form-elements__toggle
           +toggle('Получать спецпредложения')(class="toggle__inner" checked)
           +toggle('Получать спецпредложения')
+      .form-elements__inner
+        h3.form-elements__title like button
+        .form-elements__button-like
+          +button-like(2)(class="button-like__inner")
+          +button-like(12)(class="button-like--active")
