add rate button

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,5 +8,6 @@
 @import "components/input/radio/radio.scss";
 @import "components/input/toggle/toggle.scss";
 @import "components/button-like/button-like.scss";
+@import "components/rate-button/rate-button.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
