--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,5 +9,6 @@
 @import "components/input/toggle/toggle.scss";
 @import "components/button-like/button-like.scss";
 @import "components/rate-button/rate-button.scss";
+@import "components/button/button.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
