add email subscription field

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,6 +4,7 @@
 @import "utils/reset";
 @import "components/ui-logo/ui-logo.scss";
 @import "components/input/input-text/input-text.scss";
+@import "components/input/subscription-field/subscription-field.scss";
 @import "components/input/checkbox/checkbox.scss";
 @import "components/input/radio/radio.scss";
 @import "components/input/toggle/toggle.scss";
