--- a/src/components/input/radio/radio.pug
+++ b/src/components/input/radio/radio.pug
@@ -1,5 +1,5 @@
 mixin radio(text)
-  label.radio(class=attributes.class)
+  label.radio(class="radio__label")
     input(class="radio__input" type="radio" name=attributes.name checked=attributes.checked)
     span.radio__button
     =text
