--- a/src/pug/pages/form-elements.pug
+++ b/src/pug/pages/form-elements.pug
@@ -45,6 +45,11 @@ block content
         .form-elements__rate
           +rate-button(4, "rating1")(class="rate__inner")
           +rate-button(5, "rating2")
+      .form-elements__inner
+        h3.form-elements__title Checkbox Buttons
+        .form-elements__checkbox
+          +checkbox('Широкий коридор', 'Ширина коридоров в номере не менее 91 см.')
+          +checkbox('Помощник для инвалидов', 'На 1 этаже вас встретит специалист  и проводит до номера.')
     .form-elements__wrapper
       .form-elements__inner
         h3.form-elements__title Buttons
