add alias for pug

--- a/src/pug/layouts/uikit.pug
+++ b/src/pug/layouts/uikit.pug
@@ -7,5 +7,5 @@ html(lang="en")
     title= title
   body
     header.ui-header
-      include ../../components/ui-logo/logo
+      include /components/ui-logo/logo
     block content
