--- a/src/pug/pages/form-elements.pug
+++ b/src/pug/pages/form-elements.pug
@@ -1,11 +1,11 @@
-extends ../layouts/uikit
-include ../../components/input/input-text/input-text
-include ../../components/input/subscription-field/subscription-field
-include ../../components/input/checkbox/checkbox
-include ../../components/input/radio/radio
-include ../../components/input/toggle/toggle
-include ../../components/button-like/button-like
-include ../../components/rate-button/rate-button
+extends /pug/layouts/uikit
+include /components/input/input-text/input-text
+include /components/input/subscription-field/subscription-field
+include /components/input/checkbox/checkbox
+include /components/input/radio/radio
+include /components/input/toggle/toggle
+include /components/button-like/button-like
+include /components/rate-button/rate-button
 block variables
   -var title= "Form Flements"
 block content
