--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,14 +2,14 @@
 @import "utils/vars";
 @import "utils/fonts";
 @import "utils/reset";
-@import "components/ui-logo/ui-logo.scss";
-@import "components/input/input-text/input-text.scss";
-@import "components/input/subscription-field/subscription-field.scss";
-@import "components/input/checkbox/checkbox.scss";
-@import "components/input/radio/radio.scss";
-@import "components/input/toggle/toggle.scss";
-@import "components/button-like/button-like.scss";
-@import "components/rate-button/rate-button.scss";
-@import "components/button/button.scss";
+@import "~components/ui-logo/ui-logo.scss";
+@import "~components/input/input-text/input-text.scss";
+@import "~components/input/subscription-field/subscription-field.scss";
+@import "~components/input/checkbox/checkbox.scss";
+@import "~components/input/radio/radio.scss";
+@import "~components/input/toggle/toggle.scss";
+@import "~components/button-like/button-like.scss";
+@import "~components/rate-button/rate-button.scss";
+@import "~components/button/button.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
