--- a/src/pug/pages/form-elements.pug
+++ b/src/pug/pages/form-elements.pug
@@ -6,6 +6,7 @@ include /components/input/radio/radio
 include /components/input/toggle/toggle
 include /components/button-like/button-like
 include /components/rate-button/rate-button
+include /components/bullet-list/bullet-list
 block variables
   -var title= "Form Flements"
 block content
@@ -63,3 +64,6 @@ block content
           button.button click me
           button.button(disabled) click me
         button.button.button--pay перейти к оплате
+      .form-elements__inner
+        h3.form-elements__title bullet list
+        +bullet-list(["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"])
