add room about component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -12,5 +12,6 @@
 @import "~components/rate-button/rate-button.scss";
 @import "~components/button/button.scss";
 @import "~components/bullet-list/bullet-list.scss";
+@import "~components/about-room/about-room.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
