--- a/src/assets/scss/modules/form-elements.scss
+++ b/src/assets/scss/modules/form-elements.scss
@@ -1,12 +1,24 @@
 .form-elements {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr 1fr;
   max-width: 1158px;
   margin: 0 auto;
 
   &__wrapper {
     display: flex;
     flex-direction: column;
+  }
+
+  &__wrapper:last-child {
+    display: flex;
+  }
+
+  &__wrapper:nth-child(4) {
+    display: flex;
+    flex-direction: column;
+    grid-row: 2 / 3;
+    grid-column: 1 / 4;
   }
 
   &__title {
