--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,5 +13,6 @@
 @import "~components/button/button.scss";
 @import "~components/bullet-list/bullet-list.scss";
 @import "~components/about-room/about-room.scss";
+@import "~components/review/review.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
