--- a/src/assets/scss/modules/form-elements.scss
+++ b/src/assets/scss/modules/form-elements.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-rows: auto auto;
   grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 125px;
   max-width: 1158px;
   margin: 0 auto;
 
@@ -16,9 +17,13 @@
 
   &__wrapper:nth-child(4) {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     grid-row: 2 / 3;
     grid-column: 1 / 4;
+
+    .about-room {
+      margin-right: 170px;
+    }
   }
 
   &__title {
