--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -14,5 +14,6 @@
 @import "~components/bullet-list/bullet-list.scss";
 @import "~components/about-room/about-room.scss";
 @import "~components/review/review.scss";
+@import "~components/dropdown/dropdown.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
