fix dropdown background

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -24,6 +24,7 @@
   &__inner {
     display: none;
     padding: 5px 6px 10px 15px;
+    background-color: #fff;
     border-right: 1px solid $dark-shade-25;
     border-bottom: 1px solid $dark-shade-25;
     border-left: 1px solid $dark-shade-25;
