--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,5 +15,6 @@
 @import "~components/about-room/about-room.scss";
 @import "~components/review/review.scss";
 @import "~components/dropdown/dropdown.scss";
+@import "~components/expandable-checkbox-list/expandable-checkbox-list.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
