add masked text field

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,6 +8,7 @@
 @import "~components/input/checkbox/checkbox.scss";
 @import "~components/input/radio/radio.scss";
 @import "~components/input/toggle/toggle.scss";
+@import "~components/input/masked-text/masked-text.scss";
 @import "~components/button-like/button-like.scss";
 @import "~components/rate-button/rate-button.scss";
 @import "~components/button/button.scss";
