--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -18,5 +18,7 @@
 @import "~components/dropdown/dropdown.scss";
 @import "~components/range-slider/range-slider.scss";
 @import "~components/expandable-checkbox-list/expandable-checkbox-list.scss";
+@import "~components/date-dropdown/date-dropdown.scss";
+@import "~components/date-filter/date-filter.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
