refactoring dropdown and checbox-list

--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,5 +1,6 @@
-mixin dropdown()
+mixin dropdown(label)
   .dropdown
+    p.dropdown__label= label
     .dropdown__header
       input(class='dropdown__text' readonly placeholder='asdasd')
       button.dropdown__button
