add margin for form element

--- a/src/assets/scss/modules/form-elements.scss
+++ b/src/assets/scss/modules/form-elements.scss
@@ -9,6 +9,10 @@
   &__wrapper {
     display: flex;
     flex-direction: column;
+
+    &:last-child {
+      margin-bottom: 150px;
+    }
   }
 
   &__wrapper:last-child {
