--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,5 +20,7 @@
 @import "~components/expandable-checkbox-list/expandable-checkbox-list.scss";
 @import "~components/date-dropdown/date-dropdown.scss";
 @import "~components/date-filter/date-filter.scss";
+@import "~components/header/header.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
+@import "modules/headers&footers.scss";
