--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -21,6 +21,7 @@
 @import "~components/date-dropdown/date-dropdown.scss";
 @import "~components/date-filter/date-filter.scss";
 @import "~components/header/header.scss";
+@import "~components/footer/footer.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
 @import "modules/headers&footers.scss";
