--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -4,11 +4,11 @@ mixin date-dropdown(label1, label2)
       p.dropdown__label= label1
         .dropdown__header
           input(class='dropdown__text' readonly placeholder='asdasd')
-          button.dropdown__button
+          button.date-dropdown__button
             img(src="/assets/img/dropdown/expand-more.svg", alt="")
     .date-dropdown
       p.dropdown__label= label2
         .dropdown__header
           input(class='dropdown__text' readonly placeholder='asdasd')
-          button.dropdown__button
+          button.date-dropdown__button
             img(src="/assets/img/dropdown/expand-more.svg", alt="")
