--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,4 +1,5 @@
 .dropdown {
+  position: relative;
   width: 320px;
 
   &__header {
@@ -38,6 +39,9 @@
     border-bottom-left-radius: 4px;
 
     &--active {
+      position: absolute;
+      right: 0;
+      left: 0;
       display: block;
     }
   }
