--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,6 +22,9 @@
 @import "~components/date-filter/date-filter.scss";
 @import "~components/header/header.scss";
 @import "~components/footer/footer.scss";
+@import "~components/search-form/search-form.scss";
+@import "~components/registration-form/registration-form.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
 @import "modules/headers&footers.scss";
+@import "modules/cards.scss";
