rename button class

--- a/src/pug/pages/form-elements.pug
+++ b/src/pug/pages/form-elements.pug
@@ -83,7 +83,7 @@ block content
         .form-elements__buttons
           button.button click me
           button.button(disabled) click me
-        button.button.button--pay перейти к оплате
+        button.button.button--arrow перейти к оплате
       .form-elements__inner
         h3.form-elements__title bullet list
         +bullet-list(["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"])
