--- a/src/pug/pages/cards.pug
+++ b/src/pug/pages/cards.pug
@@ -1,10 +1,15 @@
 extends /pug/layouts/uikit
 include /components/search-form/search-form
 include /components/registration-form/registration-form
+include /components/reservation-form/reservation-form
 block content
   .container
-    .cards__column
-      .cards__wrapper
-        +search-form()
-      .cards__wrapper
-        +registration-form()
+    .cards__wrapper
+      .cards__column
+        .cards__item
+          +search-form()
+        .cards__item
+          +registration-form()
+      .cards__column
+        .cards__item
+          +reservation-form('luxury')
