add reservation form

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -24,6 +24,7 @@
 @import "~components/footer/footer.scss";
 @import "~components/search-form/search-form.scss";
 @import "~components/registration-form/registration-form.scss";
+@import "~components/reservation-form/reservation-form.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
 @import "modules/headers&footers.scss";
