--- a/src/assets/scss/modules/cards.scss
+++ b/src/assets/scss/modules/cards.scss
@@ -1,5 +1,11 @@
 .cards {
   &__wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 40px;
+  }
+
+  &__item {
     display: inline-block;
     margin-bottom: 40px;
   }
