--- a/src/components/reservation-form/reservation-form.pug
+++ b/src/components/reservation-form/reservation-form.pug
@@ -23,14 +23,16 @@ mixin reservation-form(luxury)
         .reservation-form__prices-item
           .reservation-form__prices-item-text
             p Сбор за услуги: скидка 2 179₽
-            img(class="reservation-form__prices-item-info" src="/assets/img/reservation-form/info.svg", alt="icon")
-            .reservation-form__tooltip подсказка
+            .reservation-form__prices-item-info
+              img(class="reservation-form__info-icon" src="/assets/img/reservation-form/info.svg", alt="icon")
+              span.reservation-form__tooltip подсказка
           span.reservation-form__prices-item-price 0₽
         .reservation-form__prices-item
           .reservation-form__prices-item-text
             p Сбор за дополнительные услугии
-            img(class="reservation-form__prices-item-info" src="/assets/img/reservation-form/info.svg", alt="icon")
-            .reservation-form__tooltip подсказка
+            .reservation-form__prices-item-info
+              img(class="reservation-form__info-icon" src="/assets/img/reservation-form/info.svg", alt="icon")
+              span.reservation-form__tooltip подсказка
           span.reservation-form__prices-item-price 300₽
       .reservation-form__total-price
         span Итого
