--- a/src/pug/pages/cards.pug
+++ b/src/pug/pages/cards.pug
@@ -2,6 +2,7 @@ extends /pug/layouts/uikit
 include /components/search-form/search-form
 include /components/registration-form/registration-form
 include /components/reservation-form/reservation-form
+include /components/login-form/login-form
 block content
   .container
     .cards__wrapper
@@ -13,3 +14,5 @@ block content
       .cards__column
         .cards__item
           +reservation-form('luxury')
+        .cards__item
+          +login-form()
