--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -26,6 +26,7 @@
 @import "~components/registration-form/registration-form.scss";
 @import "~components/reservation-form/reservation-form.scss";
 @import "~components/login-form/login-form.scss";
+@import "~components/room-card/room-card.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
 @import "modules/headers&footers.scss";
