--- a/src/pug/pages/cards.pug
+++ b/src/pug/pages/cards.pug
@@ -3,6 +3,10 @@ include /components/search-form/search-form
 include /components/registration-form/registration-form
 include /components/reservation-form/reservation-form
 include /components/login-form/login-form
+include /components/room-card/room-card
+block variables
+  -var title= "Cards"
+
 block content
   .container
     .cards__wrapper
@@ -16,3 +20,8 @@ block content
           +reservation-form('luxury')
         .cards__item
           +login-form()
+      .cards__column
+        .cards__item
+          +room-card({luxury: true, number: 888, price: "9900₽", star: 5, rewiews: 145, images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg',]})
+        .cards__item
+          +room-card({luxury: false, number: 840, price: "9900₽", star: 4, rewiews: 65, images: ['room-2.jpg', 'room-1.jpg', 'room-2.jpg', 'room-1.jpg',]})
