--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -31,3 +31,4 @@
 @import "modules/form-elements.scss";
 @import "modules/headers&footers.scss";
 @import "modules/cards.scss";
+@import "modules/landing-page.scss";
