add landing-page text

--- a/src/pug/pages/landing-page.pug
+++ b/src/pug/pages/landing-page.pug
@@ -5,5 +5,7 @@ block variables
 block content
   .landing-page
     .container
-      .landing-page__search-form
-        +search-form()
+      .landing-page__wrapper
+        .landing-page__search-form
+          +search-form()
+        p.landing-page__text Лучшие номера для вашей работы, отдыха и просто вдохновения
