--- a/src/assets/scss/modules/landing-page.scss
+++ b/src/assets/scss/modules/landing-page.scss
@@ -1,10 +1,25 @@
 .landing-page {
-  min-height: 900px;
-  padding: 1px;
   background: center / cover no-repeat
     url("/assets/img/backgrounds/landing-page-bg.jpg");
 
+  &__wrapper {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
+
   &__search-form {
     margin-top: 70px;
+  }
+
+  &__text {
+    grid-row: 2;
+    grid-column: 2;
+    align-self: end;
+    justify-self: right;
+    max-width: 290px;
+    margin-bottom: 18px;
+    text-align: right;
+    @extend %body-text;
   }
 }
