fix button name

--- a/src/components/registration-form/registration-form.pug
+++ b/src/components/registration-form/registration-form.pug
@@ -24,7 +24,7 @@ mixin registration-form()
       .registration-form__toggle
         +toggle('Получать спецпредложения')
       .registration-form__button
-        button.button.button--pay перейти к оплате
+        button.button.button--arrow перейти к оплате
       .registration-form__login
         span.registration-form__text Уже есть аккаунт на Toxin
         button.button.button--white войти
