add registration page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -32,3 +32,4 @@
 @import "modules/headers&footers.scss";
 @import "modules/cards.scss";
 @import "modules/landing-page.scss";
+@import "modules/registration.scss";
