--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,6 +1,7 @@
 @import "utils/fonts";
 .footer {
   background-color: #fff;
+  border-top: 1px solid #b3b3bc;
   &__wrapper {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
