add search room page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -33,3 +33,4 @@
 @import "modules/cards.scss";
 @import "modules/landing-page.scss";
 @import "modules/registration.scss";
+@import "modules/search-room.scss";
