--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -1,8 +1,10 @@
 .room-card {
   max-width: 270px;
+  margin-bottom: 70px;
   background-color: #fff;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 
   &__inner {
     padding: 20px 17px 19px 20px;
