--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -7,17 +7,15 @@
   src: url("/assets/fonts/montserrat-bold-webfont.woff2") format("woff2"),
     url("/assets/fonts/montserrat-bold-webfont.woff") format("woff"),
     url("/assets/fonts/montserrat-bold-webfont.ttf") format("truetype"),
-    url("/assets/fonts/montserrat-bold-webfont.svg#montserratbold")
-      format("svg");
+    url("/assets/fonts/montserrat-bold-webfont.svg#Montserrat") format("svg");
 }
 
 @font-face {
-  font-weight: normal;
+  font-weight: 400;
   font-family: "Montserrat";
   font-style: normal;
   src: url("/assets/fonts/montserrat-regular-webfont.woff2") format("woff2"),
     url("/assets/fonts/montserrat-regular-webfont.woff") format("woff"),
     url("/assets/fonts/montserrat-regular-webfont.ttf") format("truetype"),
-    url("/assets/fonts/montserrat-regular-webfont.svg#montserratregular")
-      format("svg");
+    url("/assets/fonts/montserrat-regular-webfont.svg#Montserrat") format("svg");
 }
