--- a/src/components/input/subscription-field/subscription-field.scss
+++ b/src/components/input/subscription-field/subscription-field.scss
@@ -1,7 +1,7 @@
 .subscription-field {
   position: relative;
   display: flex;
-  width: 267px;
+  max-width: 267px;
 
   &__input {
     width: 100%;
