--- a/src/components/reservation-form/reservation-form.scss
+++ b/src/components/reservation-form/reservation-form.scss
@@ -87,7 +87,7 @@
     position: absolute;
     left: 0;
     z-index: 5;
-    width: 75px;
+    width: auto;
     padding: 5px;
     color: $dark-shade-75;
     background-color: $dark-shade-25;
