--- a/src/pug/pages/form-elements.pug
+++ b/src/pug/pages/form-elements.pug
@@ -17,6 +17,7 @@ include /components/date-dropdown/date-dropdown
 include /components/date-filter/date-filter
 block variables
   -var title= "Form Flements"
+  -var review = {name: 'Рулон Обоев', src: '/assets/img/review/4el.jpg', time: '5 дней назад', likes: '12', liked: true, comment: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'}
 block content
   .form-elements
     .form-elements__wrapper
@@ -88,8 +89,8 @@ block content
         h3.form-elements__title bullet list
         +bullet-list(["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"])
     .form-elements__wrapper
-      .about-room
+      .form-elements__about-room
         +about-room('/assets/img/about-room/insert_emoticon.png', 'Комфорт', 'Шумопоглощающие стены')
         +about-room('/assets/img/about-room/location_city.png', 'Удобство', 'Окно в каждой из спален')
-      .review
-        +review('/assets/img/review/4el.jpg', 'Рулон Обоев', '5 дней назад', 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
+      .form-elements__review
+        +review(review)
