--- a/src/components/review/review.pug
+++ b/src/components/review/review.pug
@@ -1,11 +1,16 @@
-mixin review(src, name, time, comment)
-  .review__item
+include /components/button-like/button-like
+mixin review(obj)
+  -var {src, name, time, comment, likes, liked} = obj
+  .review
     img(class="review__img", src=src, alt="ava")
     span.review__name
       =name
     span.review__time
       =time
-    +button-like(12)(class="button-like--active")
+    if liked
+      +button-like(likes)(class="button-like--active")
+    else
+      +button-like(likes)
     p.review__comment
       =comment
 
