--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -10,8 +10,7 @@ mixin header(login)
             li.header__navigation-item
               a(class="header__navigation-link" href="#") О нас
             li.header__navigation-item
-              a(class="header__navigation-link header__navigation-link--expand" href="#") Услуги
-                img(src="/assets/img/dropdown/expand-more.svg", alt="expand")
+              p(class="header__navigation-link header__navigation-link--expand" href="#") Услуги
               ul.header__navigation-dropdown
                 li
                   a(class="header__navigation-link" href="#") Услуга 1
@@ -26,8 +25,7 @@ mixin header(login)
             li.header__navigation-item
               a(class="header__navigation-link" href="#") Новости
             li.header__navigation-item
-              a(class="header__navigation-link header__navigation-link--expand" href="#") Соглашения
-                img(src="/assets/img/dropdown/expand-more.svg", alt="expand")
+              p(class="header__navigation-link header__navigation-link--expand" href="#") Соглашения
               ul.header__navigation-dropdown
                 li
                   a(class="header__navigation-link" href="#") Соглашение 1
