--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -13,8 +13,12 @@
     align-items: center;
   }
 
+  &__navigation-item {
+    position: relative;
+  }
+
   &__navigation-item:not(:last-child) {
-    margin-right: 20px;
+    margin-right: 23px;
   }
 
   &__navigation-link {
@@ -25,6 +29,23 @@
     font-family: "Montserrat" sans-serif;
     font-style: normal;
     line-height: 17px;
+    cursor: pointer;
+
+    &--expand {
+      padding-right: 17px;
+    }
+
+    &--expand::after {
+      position: absolute;
+      top: 2px;
+      right: 0;
+      width: 9px;
+      height: 9px;
+      border-top: 2px solid $dark-shade-75;
+      border-right: 2px solid $dark-shade-75;
+      transform: rotate(135deg);
+      content: "";
+    }
 
     img {
       margin-left: 7px;
@@ -34,10 +55,12 @@
 
   &__navigation-dropdown {
     display: none;
+    width: 110px;
     padding: 0px 5px;
 
     &--active {
       position: absolute;
+      left: 0;
       display: block;
       background-color: #fff;
     }
