add room-details page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -27,6 +27,7 @@
 @import "~components/reservation-form/reservation-form.scss";
 @import "~components/login-form/login-form.scss";
 @import "~components/room-card/room-card.scss";
+@import "~components/chart/chart.scss";
 @import "modules/colors&types.scss";
 @import "modules/form-elements.scss";
 @import "modules/headers&footers.scss";
@@ -34,3 +35,4 @@
 @import "modules/landing-page.scss";
 @import "modules/registration.scss";
 @import "modules/search-room.scss";
+@import "modules/room-details.scss";
